# hahi

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  hahi.code-workspace
agent/: Cargo.toml
agent/src/: config.rs  main.rs  run.rs  service.rs
agent/src/adapters/: mod.rs
agent/src/adapters/grpc/: mod.rs
agent/src/adapters/llm/: provider.rs  sse.rs
agent/src/adapters/llm/providers/: anthropic.rs  mod.rs  openai.rs
agent/src/adapters/mcp/: registry.rs
agent/src/adapters/store/pg/: audit.rs  memory.rs  mod.rs
agent/src/adapters/store/redis/: checkpoint.rs  event.rs  mod.rs
agent/src/common/: checkpoint.rs  ids.rs  message.rs  mod.rs  stream_event.rs  token.rs  tool_types.rs
agent/src/core/: collapse.rs  compact.rs  error_recovery.rs  event_bus.rs  hooks.rs  loop.rs  mod.rs  permission.rs  pipeline.rs  plan_mode.rs  xml.rs
agent/src/infra/: mod.rs
agent/src/infra/metrics/: mod.rs
agent/src/infra/store/: mod.rs
agent/src/infra/store/pg/: audit.rs  checkpoint.rs  memory.rs  mod.rs  runtime_state.rs  tool_result.rs
agent/src/infra/store/redis/: checkpoint.rs  event.rs  mod.rs
agent/src/kernel/: error_recovery.rs  event_bus.rs  hooks.rs  loop.rs  mod.rs
agent/src/kernel/compression/: compact.rs  mod.rs
agent/src/llm/providers/: anthropic.rs  mod.rs  openai.rs
agent/src/mcp/: client.rs  mod.rs  registry.rs
agent/src/memory/: ctx.rs  embed.rs  engine.rs  inject.rs  lifecycle.rs  mod.rs  policy.rs  recall.rs  reflect.rs
agent/src/multi/: agent_def.rs  isolation.rs  mod.rs  spawn.rs
agent/src/multi/agents/: explorer.yaml
agent/src/prompt/: builder.rs  cache_boundary.rs  mod.rs  rules.rs
agent/src/runtime/: assembler.rs  builders.rs  reflection_runner.rs
agent/src/runtime/prompt/: builder.rs
agent/src/skill/: discovery.rs  executor.rs  loader.rs  mod.rs
agent/src/systems/: mod.rs
agent/src/systems/memory/: ctx.rs  inject.rs  lifecycle.rs  mod.rs  policy.rs  reflect.rs  types.rs
agent/src/systems/skills/: discovery.rs  executor.rs
agent/src/systems/subagents/: agent_def.rs  fork.rs  isolation.rs  mod.rs
agent/src/systems/subagents/agents/: general.yaml
agent/src/systems/tools/: executor.rs  search.rs
agent/src/systems/tools/builtin/: agent.rs  memory_write.rs  web_fetch.rs  web_search.rs
agent/src/tool/: definition.rs  executor.rs  mod.rs  registry.rs  search.rs
agent/src/tool/builtin/: agent.rs  memory_ctx.rs  memory_forget.rs  memory_search.rs  memory_write.rs  mod.rs  web_fetch.rs  web_search.rs
apps/agent/: Cargo.toml
apps/gateway/: Cargo.toml
apps/gateway/src/: config.rs  error.rs  main.rs  router.rs
apps/gateway/src/clients/: mod.rs  session.rs
apps/gateway/src/handlers/: health.rs
apps/gateway/src/handlers/session/: events.rs  mod.rs  runs.rs  threads.rs
apps/gateway/src/middleware/: auth.rs  request_id.rs
apps/gateway/src/sse/: connection.rs
apps/session/: Cargo.toml
apps/session/src/: config.rs  main.rs
apps/session/src/app/: mod.rs  send_message.rs  stream_events.rs
apps/session/src/domain/: error.rs  ids.rs  message.rs  mod.rs  run.rs  thread.rs
apps/session/src/infra/: events.rs  mod.rs
apps/session/src/infra/grpc/: agent_client.rs  event_projection.rs  execution_service.rs  mod.rs  thread_service.rs
apps/session/src/infra/pg/: message_repo.rs  mod.rs  run_repo.rs  thread_repo.rs
apps/session/src/infra/redis/: event_stream.rs
apps/session/src/ports/: agent_dispatcher.rs  event_stream.rs  mod.rs  repository.rs
contracts/proto/: agent_event.proto  chat.proto  common.proto  events.proto
deploy/: agent.Dockerfile  docker-compose.yml  gateway.Dockerfile
gateway/: Cargo.toml
gateway/src/: config.rs  main.rs  router.rs
gateway/src/middleware/: auth.rs
gateway/src/sse/: connection.rs  fan_out.rs  mod.rs
modules/chat/: Cargo.toml
modules/chat/src/: config.rs  handler.rs  main.rs  repo.rs  service.rs
(+69 files in other folders)
