[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
hahi-proto = { path = "../infra/gen/rust" }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tonic = "0.14"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.4", features = ["sqlx"] }
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
rand = "0.8"
rmcp = { version = "1.3.0", features = ["client", "transport-child-process"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
jsonschema = "0.28"
sha2 = "0.10"
tonic-prost = "0.14"

[dev-dependencies]
tempfile = "3"
