[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
hahi-proto = { path = "../../contracts/gen/rust" }

tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum         = { version = "0.8", features = ["macros"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["cors", "trace", "request-id"] }
tonic        = "0.14"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
uuid         = { version = "1", features = ["v4"] }

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-stream = "0.3"
futures      = "0.3"
anyhow    = "1"
thiserror = "2"
