[package]
name = "session-service"
version = "0.1.0"
edition = "2024"

[dependencies]
hahi-proto = { path = "../../contracts/gen/rust" }

tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic        = "0.14"
tonic-prost  = "0.14"
base64       = "0.22"
async-stream = "0.3"

axum  = "0.8"
tower = "0.5"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "streams"] }

uuid    = { version = "1", features = ["v4"] }
chrono  = { version = "0.4", features = ["serde"] }
dashmap = "6"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow     = "1"
thiserror  = "2"
async-trait = "0.1"
