[package]
name = "chat-service"
version = "0.1.0"
edition = "2024"

[dependencies]
hahi-proto = { path = "../../infra/gen/rust" }

tokio = { version = "1", features = ["full"] }
tonic = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tonic-prost = "0.14"
